--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "db:types": "supabase gen types typescript --project-id $PROJECT_ID > src/types/database.ts",
+    "db:types": "supabase gen types typescript --project-id gwmybeiagdvbyncqqpje  > src/types/database.ts",
     "db:reset": "supabase db reset",
     "db:start": "supabase start",
     "db:stop": "supabase stop"
